--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alimentação Saúdavel</title>
 </head>
+
 <body>
+    <img id="banner" src="banner.jpg">
+    <div class="principal">
     <h1> Alimentação Saúdavel</h1>
+
     <p>A alimentação saudável é fundamental para manter o corpo em equilíbrio. <strong>Para ter uma boa alimentação saudável,devemos primeiramente se alimentar de maneira adequada.</strong> Ela consiste em consumir uma variedade de alimentos nutritivos, como frutas,legumes,grãos integrais e proteínas. </p>
     <p>Visto que, <em>não realizando a alimentação saudável,há uma série de doenças que podem ocorrer</em>. Como, por exemplo diabetes,hipertensão,obesidade e até mesmo câncer.Podemos ver que todos esses problemas de saúde são graves, por isso é importante se manter saudável.</p>
     <p>Com isso, concluímos que a alimentação saudável é importante para fornecer nutrientes necessários ao corpo, manter a saúde,preveir doenças e prevenir o bem-estar geral.</p>
+    </div>
     <div class="Doenças">
         <h2>Doenças</h2>
     
@@ -18,6 +23,10 @@
         <li class="itens">Hipertensão</li>
         <li class="itens">Obesidade</li>
         <li class="itens">Câncer</li>
-    
-</body>
-</html>
+    </ul>
+
+      <img src="alimentação.jpg" class="imagemalimentação">
+    <img src="prevenirdoenças.jpg" class="imagemprevenirdoenças">
+   </div>      
+  </body>
+ </html>
