--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <img id="banner" src="banner.jpg">
+    <img id="alimentacao" src="prevenirdoenças.jpg">
     <div class="principal">
     <h1> Alimentação Saúdavel</h1>
 
