--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <li class="itens">Câncer</li>
     </ul>
 
-      <img src="alimentação.jpg" class="imagemalimentação">
-    <img src="prevenirdoenças.jpg" class="imagemprevenirdoenças">
+      <img src="alimentação.jpg" alt="Image" height="42" width="60">
+      <img src="prevenirdoenças.jpg" class="imagemprevenirdoenças">
    </div>      
   </body>
  </html>
