--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <li class="itens">Câncer</li>
     </ul>
 
-      <img src="alimentação.jpg" alt="Image" height="42" width="60">
+      <img src="alimentaçao.jpg" alt="Image" height="52" weight="70"
       <img src="prevenirdoenças.jpg" class="imagemprevenirdoenças">
    </div>      
   </body>
