--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <li class="itens">Câncer</li>
     </ul>
 
-      <img src="imagemfile.jpg" alt="Image" height="42" weight="60"
+      <img src="alimentação.jpg" alt="Image" height="42" weight="60"
       <img src="prevenirdoenças.jpg" class="imagemprevenirdoenças">
    </div>      
   </body>
